--- a/Project_ChronoView/.gitignore
+++ b/Project_ChronoView/.gitignore
@@ -14,15 +14,18 @@ lerna-debug.log*
 
 # Test Output Directories (created by setup.js / test runs)
 # These are relative to Project_ChronoView/
-tests/screenshots/test/
-tests/screenshots/diff/
-tests/reports/
+tests/screenshots/test/*
+!tests/screenshots/test/.gitkeep
+tests/screenshots/diff/*
+!tests/screenshots/diff/.gitkeep
+tests/reports/*
+!tests/reports/.gitkeep
 tests/animations/*
-!tests/animations/.gitkeep # Keep this empty dir if needed
+!tests/animations/.gitkeep
 tests/components/*
-!tests/components/.gitkeep # Keep this empty dir if needed
+!tests/components/.gitkeep
 tests/performance/*
-!tests/performance/.gitkeep # Keep this empty dir if needed
+!tests/performance/.gitkeep
 
 # --- Ensure specific files ARE tracked (negation rules) ---
 # These ensure that if a broader rule above (or a future one)
